# hrw

./: README.md  pyproject.toml
output/html_files/: .html  1 Million Facebook Fans Strong.html  10 Good News Stories for Children in 2019.html  10 Good News Stories for Kids in 2023.html  10 Human Rights Goals for the Presidents Fourth Quarter.html  10 Questions Journalists Should Ask FIFA and Qatari Authorities About Rights Abuses.html  10 Questions the Saudi Crown Prince Needs to Answer.html  10 Steps for Improving Human Rights in Pakistan.html  10 Years and No Justice The Enforced Disappearance of Journalist and Blogger Ahmed Rilwan Abdullah.html  10 years on Iraq ignores promised reforms in human rights.html  10-Rand Increase Wont Keep Older People from Going Hungry.html  10-Year Sentence for Political Graffiti in Azerbaijan.html  100 Crimean Tatar Kids Who Lost Their Fathers.html  100 Days in Prison and Counting for Congolese Activist.html  100 States Support Norways Initiative to Protect Schools.html  100 Waki.html  100 days Before Paralympics in Sochi Barriers Remain for Disabled Athletes.html  100 flowers of repression bloom as Ethiopia moves to gag press ahead of elections.html  1000 Days into the War on ISIS Civilian Deaths Mount.html  10000 Days of Hun Sen.html  111 Nations Agree to Landmark Ban on Cluster Bombs.html  120 Countries Have Signed the Safe Schools Declaration Sadly the US Isnt One of Them.html  128 Rights Groups Urge New York Legislature to Implement Pretrial Reforms.html  (+39820 more)
src/: excel_export.py  main.py  split_csv_per_year.py  utils.py
(+36 files in other folders)
