[tool.poetry]
name = "hrw"
version = "0.1.0"
description = ""
authors = ["Rafael de Carvalho <rafael@bgcbrasil.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
selenium-driverless = "^1.9.3.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pyreadstat = "^1.2.7"
tenacity = "^9.0.0"
rich = "^13.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
